<resources>
    <string name="app_name">PokemonDBApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Used in the main welcome page -->
    <string name="welcome_message">Welcome to the Pokémon Database App!</string>
    <string name="pokemon_btn">Pokémon</string>
    <string name="moves">Moves</string>
    <string name="items">Items</string>
    <string name="locations">Locations</string>
    <string name="pokedex_welcome">Welcome to the Pokédex!</string>
    <string name="select_your_pokemon">Select your Pokémon:</string>
    <string name="placeholder_text">Placeholder text!</string>

    <!-- Used in PokemonDataPage -->
    <string name="name_placeholder">Name</string>
    <string name="num_placeholder">Num</string>
    <string name="classification">Classification:\ </string>
    <string name="class_placeholder">Class Placeholder</string>
    <string name="height_placeholder">0.0m</string>
    <string name="height">Height:\ </string>
    <string name="weight">Weight:\ </string>
    <string name="weight_placeholder">0.0kg</string>
    <string name="capture_rate">Capture Rate:\ </string>
    <string name="int_placeholder">0</string>
    <string name="experience_growth">Experience Growth:\ </string>
    <string name="xp_growth_placeholder">0 Points | None</string>
    <string name="stats">Stats:\ </string>
    <string name="attack">Attack:\ </string>
    <string name="defense">Defense:\ </string>
    <string name="special">Special:\ </string>
    <string name="speed">Speed:\ </string>
    <string name="hp">Hit Points:\ </string>
    <string name="evo_graphic_placeholder">Evolution graphic will be generated at runtime!</string>
    <string name="locations_">Locations:</string>
    <string name="red_">Red:\ </string>
    <string name="location_text_placeholder">Location text will be filled at runtime!</string>
    <string name="green_jp_amp_blue_intl"><![CDATA[Green (Jp.) & Blue (intl.): ]]></string>
    <string name="blue_jp_">Blue (Jp.):\ </string>
    <string name="yellow_">Yellow:\ </string>
    <string name="generation_1_level_up_">Generation I Level Up:</string>
    <string name="level">Level</string>
    <string name="attack_name">Attack Name</string>
    <string name="type">Type</string>
    <string name="power">Power</string>
    <string name="accuracy">Accuracy</string>
    <string name="pp">PP</string>
    <string name="tm_amp_hm_attacks"><![CDATA[TM & HM Attacks]]></string>
    <string name="tm_hm">TM/HM</string>
</resources>