<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokemonDataPage">

    <TableLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_placeholder"
                android:textSize="20sp"
                android:layout_marginHorizontal="5dp" />

            <TextView
                android:id="@+id/name_text"
                android:text="@string/name_placeholder"
                android:textSize="40sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/sprite1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitCenter"
                android:src="@drawable/g1_001" />

            <ImageView
                android:id="@+id/sprite2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitCenter"
                android:src="@drawable/g1_001" />

            <ImageView
                android:id="@+id/sprite3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitCenter"
                android:src="@drawable/g1_001"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/type1"
                android:src="@drawable/type_grass"
                android:layout_height="30dp"
                android:layout_width="80dp"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="20dp"/>

            <ImageView
                android:id="@+id/type2"
                android:src="@drawable/type_grass"
                android:layout_height="30dp"
                android:layout_width="80dp"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classification"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/class_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_placeholder"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/height_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_placeholder"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_placeholder"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_rate"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/cap_rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/int_placeholder"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience_growth"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/xp_rate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xp_growth_placeholder"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hp"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/hp_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/int_placeholder"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attack"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/atk_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/int_placeholder"
                        android:textSize="15sp"/>

                </LinearLayout>

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defense"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/def_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/int_placeholder"
                    android:textSize="15sp"/>

            </LinearLayout>

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/special"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/spc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/int_placeholder"
                    android:textSize="15sp"/>

            </LinearLayout>

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/spd_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/int_placeholder"
                    android:textSize="15sp"/>

            </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evo_graphic_placeholder"
                android:textSize="30sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locations_"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/red_locations_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_text_placeholder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green_jp_amp_blue_intl"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/jp_green_us_blue_locations_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_text_placeholder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue_jp_"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jp_blue_locations_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_text_placeholder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yellow_"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/yellow_locations_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_text_placeholder" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generation_1_level_up_"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level"
                    android:layout_marginHorizontal="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attack_name"
                    android:layout_marginHorizontal="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_marginHorizontal="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:layout_marginHorizontal="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accuracy"
                    android:layout_marginHorizontal="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pp"
                    android:layout_marginHorizontal="2dp" />

            </TableRow>


        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tm_amp_hm_attacks"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tm_hm"
                    android:layout_marginHorizontal="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attack_name"
                    android:layout_marginHorizontal="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_marginHorizontal="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:layout_marginHorizontal="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accuracy"
                    android:layout_marginHorizontal="2dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pp"
                    android:layout_marginHorizontal="2dp" />

            </TableRow>


        </TableLayout>

    </TableLayout>

</androidx.core.widget.NestedScrollView>